--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,24 @@
-# Ignore environment variables
-.env
-
-# Ignore Python cache files
-__pycache__/
-*.pyc
-*.pyo
-
-# Ignore Docker files that aren't necessary for the build
-.Dockerfile.swp
-docker-compose.override.yml
-
-# Ignore any other temporary or log files
-*.log
-
-# Ignore macOS automatically generated file for folder metadata
+# macOS
 .DS_Store
 
-# Ignore the mempool_transactions.json file to avoid pushing filled data
-mempool_transactions.json
+# Node.js (if you have any Node dependencies or files)
+node_modules/
+npm-debug.log*
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Ignore environment variable files
+.env
+
+# Ignore build output
+/dist/
+/build/
+
+/coverage/
+
+/*.swp
